# indic-g2p

./: INDIC_PHONES.md  LICENSE  README.md  pyproject.toml
examples/: usage.py
indicg2p/: __init__.py  as.py  bn.py  espeak.py  gu.py  hi.py  kn.py  ml.py  mr.py  normalize.py  or.py  pa.py  ta.py  te.py  ur.py
notebooks/: indic_voice.ipynb
