[project]
name = "indic-g2p"
version = "0.1.0"
description = "Native G2P engine for Indian languages"
readme = "README.md"
authors = [
    { name = "Kushal Kant Bind", email = "bindkushalkant@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "regex",
    "unicodedata2",
]

[project.optional-dependencies]
hi = ["num2words"]
pa = ["num2words"]
bn = ["num2words"]
en = ["num2words", "spacy"]

[project.urls]
Homepage = "https://github.com/Bindkushal/indic-g2p"
