[project]
name = "indic-g2p"
version = "0.1.0"
description = "Native G2P engine for Indian languages"
readme = "README.md"
authors = [
    { name = "Kushal Kant Bind", email = "bindkushalkant@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "regex",
    "unicodedata2",
    "addict",
    "num2words",
    "phonemizer",
    "espeakng-loader",
]

[project.optional-dependencies]
en = ["spacy"]

[project.urls]
Homepage = "https://github.com/Bindkushal/indic-g2p"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["indicg2p"]
